--- a/src/components/landing/FeaturedProduct/product.css
+++ b/src/components/landing/FeaturedProduct/product.css
@@ -6,7 +6,7 @@
     flex-direction: column;
 }
 .product_img {
-    width: 200px !important;
+    width: 220px !important;
     height: 180px !important;
     position: relative;
     display: flex;
@@ -21,7 +21,7 @@
     height: 100%;
     box-shadow: 0 3px 8px rgb(0 0 0 / 17%);
     /* border: 1px solid #e0e0e0; */
-    border-radius: 13px;
+    border-radius: 4px;
     cursor: pointer;
 }
 .product_wrapper {
@@ -51,9 +51,17 @@
     margin-top: 60px;
 }
 .product_banner img {
-    border-radius: 13px;
+    border-radius: 4px;
     width: 100%;
     height: 100%;
+}
+.loader{
+    position: relative;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50vh;
 }
 
 @media (max-width: 991px) {
