--- a/src/components/landing/FromTheBlog/from_the_blog.css
+++ b/src/components/landing/FromTheBlog/from_the_blog.css
@@ -22,12 +22,12 @@
     position: absolute;
     content: "";
     width: 70px;
-    height: 3%;
+    height: 2%;
     background: var(--bg);
     bottom: 14%;
-    /* top: 0; */
+    top: 70%;
     left: 50%;
-    transform: translate(-50%);
+    transform: translate(-50%, -50%);
 }
 .from_the_blog_card {
     position: relative;
@@ -35,12 +35,12 @@
     flex-direction: column;
 }
 .from_the_blog_card_img {
-    width: 290px;
+    width: 300px;
     height: 210px;
     padding-bottom: 0.7em;
 }
 .from_the_blog_card_img img {
-    border-radius: 10px;
+    border-radius: 4px;
     /* object-fit: contain; */
     width: 100%;
     height: 100%;
